tests/negative/implicit_coercion.bc
// EXPECT ERROR: Implicit coercion — i32 used where f64 expected without cast
// There are no implicit type coercions in Babel-C.

fn! main() {
    let x: i32 = 5;
    let y: f64 = x;
}
